--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,8 +8,16 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <title>Quiz</title>
 </head>
-
 <body>
+    <nav class="blue">
+        <div class="nav-wrapper blue">
+            <img class="logo"src="https://www.buzzfeed.com/static-assets/img/buzzfeed_arrow.e86a786d9e5e2250e1ed3e0ec95ba42d.png">
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <li class="fun-quiz">Buzzfeed Quiz</li>
+                <li><a href="\badges">By Lucy Cullen</a></li>
+            </ul>
+        </div>
+    </nav>
     <h1> Go Shopping at Target and We'll Give You a Taylor Swift Song to Listen To</h1>
     <p class="tagline">Are you ready for it?</p>
     <form class="quiz_form" action="/results" method="POST">
