--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -9,7 +9,7 @@
     <title>Quiz</title>
 </head>
 
-<body>
+<body class="result-page">
     <h1 class="results">You got:</h1>
     <p class="response">{{ response }}</p>
     {% if response == "22 by Taylor Swift!!" %}
